# ros2_lidar_benchmark

./: .gitignore  ANALYSIS_CAPABILITIES.md  LICENSE  README.md  check_data_flow.py  check_filter_output.sh  check_input_source.sh  check_output_files.sh  check_qos_info.py  debug_benchmark.py  debug_full_pipeline.sh  debug_visualizer.py  diagnose_benchmark_issue.py  diagnose_data_issue.py  diagnose_issue.py  fix_data_reception.py  fix_rmw_issue.sh  fixed_pointcloud_receiver.py  monitor_benchmark.sh  quick_rebuild.sh  rebuild_and_run.sh  ros2-lidar-bench  ros2_lidar_healthcheck.sh  run_benchmark.sh  run_minimal_benchmark.sh  setup_benchmark.sh  show_results.sh  simple_check.py  start_filter_example.sh  test_all_topics.py  test_both_topics.py  test_complete_flow.py  test_excel_graphs.py  test_float64_array.py  test_nodes_step_by_step.sh  test_parameters.py  test_receiver.sh  test_rviz_compatible.py  test_simple_receiver.py  test_subscriber.py  (+4 more)
ros2_lidar_benchmark/: CMakeLists.txt  README.md  package.xml
ros2_lidar_benchmark/config/: benchmark_config.yaml
ros2_lidar_benchmark/launch/: benchmark.launch.py  benchmark_headless.launch.py  benchmark_with_rmw.launch.py  benchmark_with_timeout.launch.py  debug_benchmark.launch.py  long_term_record.launch.py  long_term_record_test.launch.py
ros2_lidar_benchmark/scripts/: __init__.py  benchmark_analyzer.py  data_recorder.py  excel_report_enhanced.py  excel_report_generator.py  excel_report_with_graphs.py  graph_generator.py  long_term_data_recorder.py  metrics_collector.py  pointcloud_receiver.py  system_monitor.py  visualizer.py  (+2 more)
